Added API and main.js script references to index.html

--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
         if (score === 4) color = '#5cb85c';
         strengthBar.style.width = percent + '%';
         strengthBar.style.background = color;
-    });
-    </script>
+    });    </script>
+    <script src="js/api.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
