Fixed deleteCredential function and integrated it with main.js

--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
             </div>
             <div id="passwordList" class="password-list">
                 <!-- Passwords will be displayed here -->
+                <li class="credential-item" data-id="1">
+    <span>Credential 1</span>
+    <button onclick="deleteCredentialHandler(this)">Delete</button>
+</li>
             </div>
         </div>
     </div>
