--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
         <header>
             <h1 style="color: var(--maroon); text-align:center; margin-bottom: 24px;">GlobiQ Password Manager</h1>
         </header>
-        <div class="tabs">
-            <button class="tab active" id="tab-add">Add Credential</button>
+        <div class="tabs">            <button class="tab active" id="tab-add">Add Credentials</button>
             <button class="tab" id="tab-list">View Credentials</button>
         </div>
         <div class="tab-content active" id="add-content">
