--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>GlobiQ Password Manager</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GlobiQ Password Manager</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -192,11 +193,7 @@
     <div class="container">
         <header>
             <h1 style="color: var(--maroon); text-align:center; margin-bottom: 24px;">GlobiQ Password Manager</h1>
-        </header>
-        <div class="tabs">            <button class="tab active" id="tab-add">Add Credentials</button>
-            <button class="tab" id="tab-list">View Credentials</button>
-        </div>
-        <div class="tab-content active" id="add-content">
+        </header>        <div class="content-wrapper">
             <!-- Update your form element -->
 <form id="addPasswordForm" class="add-password-form" onsubmit="saveCredential(event)">
     <label for="website">Website</label>
