fix: improve UI, password strength meter and credential display

--- a/index.html
+++ b/index.html
@@ -202,9 +202,10 @@
     <input type="text" id="username" placeholder="Username" required>
     <label for="password">Password</label>
     <input type="password" id="password" placeholder="Password" required>
-    <div class="password-strength" id="passwordStrength">
-        <div class="password-strength-bar" id="passwordStrengthBar"></div>
+    <div class="password-strength">
+        <div class="password-strength-bar" id="strengthBar"></div>
     </div>
+    <div id="strengthText" class="password-strength-text">Password Strength: Not Set</div>
     <button type="submit">Save Credential</button>
 </form>
         </div>
