--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
 
     <div class="container">
         <div class="tabs">
-            <div class="tab active" onclick="switchTab('addCredential')">Add Credential</div>
-            <div class="tab" onclick="switchTab('viewCredentials')">View Credentials</div>
+            <div class="tab active" data-tab="addCredential">Add Credential</div>
+            <div class="tab" data-tab="viewCredentials">View Credentials</div>
         </div>
 
         <div id="addCredentialTab" class="tab-content active">
