--- a/index.html
+++ b/index.html
@@ -250,6 +250,45 @@
             font-size: 18px;
             color: inherit;
         }
+
+        /* Styles for role selector */
+        .role-selector {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .role-button {
+            background: var(--maroon);
+            color: var(--white);
+            border: none;
+            border-radius: 4px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+
+        .role-button:hover {
+            background: var(--maroon-light);
+        }
+
+        .role-button.active {
+            background: var(--maroon);
+            color: var(--white);
+        }
+
+        /* Admin only styles */
+        .admin-only {
+            display: none;
+        }
+
+        .admin-view .admin-only {
+            display: block;
+        }
+
+        .admin-view .user-only {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -257,6 +296,12 @@
 
     <!-- Alert box for messages -->
     <div class="alert" style="display: none;"></div>
+
+    <!-- Role selector if user has admin rights -->
+    <div id="roleSelector" class="role-selector" style="display: none;">
+        <button class="role-button active" data-role="user">User View</button>
+        <button class="role-button" data-role="admin">Admin View</button>
+    </div>
 
     <div class="container">
         <div class="tabs">
@@ -268,24 +313,12 @@
             <div class="add-password-form">                
                 <div class="form-group">
                     <label for="project">Project</label>
-                    <select id="project" class="input-field" required>
-                        <option value="Default">Select Project</option>
-                        <option value="Project1">Project 1</option>
-                        <option value="Project2">Project 2</option>
-                        <option value="Project3">Project 3</option>
-                        <option value="Other">Other</option>
-                    </select>
+                    <input type="text" id="project" class="input-field" placeholder="Enter project name" required>
                 </div>
 
                 <div class="form-group">
                     <label for="category">Category</label>
-                    <select id="category" class="input-field">
-                        <option value="General">General</option>
-                        <option value="Database">Database</option>
-                        <option value="API">API</option>
-                        <option value="Server">Server</option>
-                        <option value="Other">Other</option>
-                    </select>
+                    <input type="text" id="category" class="input-field" placeholder="Enter category name" required>
                 </div>
 
                 <div class="form-group">
@@ -297,7 +330,7 @@
                     </select>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group admin-only" style="display: none;">
                     <label>
                         <input type="checkbox" id="isAdmin"> Admin View Only (Read-only credential)
                     </label>
@@ -329,10 +362,9 @@
         </div>        
         <div id="viewCredentials" class="tab-content">
             <div class="view-controls">
-                <div class="project-filter">
-                    <select id="projectFilter" class="input-field">
-                        <option value="All">All Projects</option>
-                    </select>
+                <div class="filter-container">
+                    <input type="text" id="projectFilter" class="input-field" placeholder="Filter by project...">
+                    <input type="text" id="categoryFilter" class="input-field" placeholder="Filter by category...">
                 </div>
                 <div class="search-container">
                     <input type="text" id="searchCredentials" class="input-field" placeholder="Search credentials...">
