--- a/index.html
+++ b/index.html
@@ -416,12 +416,71 @@
         .secondary-button:hover {
             background: #5a6268;
         }
+
+        #loadingIndicator {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(255, 255, 255, 0.9);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            z-index: 1000;
+            text-align: center;
+        }
+
+        .spinner {
+            border: 4px solid rgba(128,0,0,0.1);
+            border-left-color: var(--maroon);
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin: 0 auto 10px;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
+
+        .error-container {
+            background: #fff;
+            border: 1px solid #ffdede;
+            border-radius: 8px;
+            padding: 20px;
+            margin: 20px 0;
+            text-align: center;
+        }
+
+        .error-container .error {
+            color: var(--maroon);
+            margin-bottom: 15px;
+        }
+
+        .error-container button {
+            background: var(--maroon);
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .error-container button:hover {
+            background: var(--maroon-light);
+        }
     </style>
 </head>
 <body>
-    <h1 class="app-title">GlobiQ Password Manager</h1>
+    <!-- Loading Indicator -->
+    <div id="loadingIndicator">
+        <div class="spinner"></div>
+        <p>Loading...</p>
+    </div>
 
-    <!-- Alert box for messages -->
+    <!-- Alert Box for Messages -->
     <div class="alert" style="display: none;"></div>
 
     <div class="container">
