--- a/index.html
+++ b/index.html
@@ -471,6 +471,307 @@
         .error-container button:hover {
             background: var(--maroon-light);
         }
+
+        .admin-login-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .admin-login-form {
+            background: white;
+            padding: 24px;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            width: 90%;
+            max-width: 400px;
+        }
+
+        .admin-login-form h2 {
+            color: var(--maroon);
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .admin-panel {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(128,0,0,0.08);
+        }
+
+        .admin-panel h2 {
+            color: var(--maroon);
+            margin-bottom: 20px;
+        }
+
+        .credentials-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .credential-card {
+            background: white;
+            border-radius: 8px;
+            padding: 15px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            border: 1px solid #eee;
+            transition: transform 0.2s;
+        }
+
+        .credential-card:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+        }
+
+        .credential-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 10px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #eee;
+        }
+
+        .credential-title {
+            font-weight: 600;
+            color: var(--maroon);
+        }
+
+        .credential-actions {
+            display: flex;
+            gap: 10px;
+        }
+
+        .credential-field {
+            margin: 5px 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .credential-field label {
+            font-weight: 500;
+            color: #666;
+        }
+
+        .search-filters {
+            display: flex;
+            gap: 15px;
+            margin-bottom: 20px;
+            flex-wrap: wrap;
+        }
+
+        .search-box {
+            flex: 1;
+            min-width: 200px;
+        }
+
+        .filter-select {
+            min-width: 150px;
+        }
+
+        .btn-admin {
+            background: var(--maroon);
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+
+        .btn-admin:hover {
+            background: var(--maroon-light);
+        }
+
+        .btn-delete {
+            color: #dc3545;
+            background: none;
+            border: 1px solid #dc3545;
+            padding: 4px 8px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .btn-delete:hover {
+            background: #dc3545;
+            color: white;
+        }
+
+        /* Admin Tab Styles */
+        .admin-controls {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .admin-search-box {
+            display: flex;
+            gap: 10px;
+            flex: 1;
+        }
+
+        .admin-search {
+            flex: 1;
+            padding: 10px;
+            border: 2px solid var(--maroon);
+            border-radius: 4px;
+            font-size: 16px;
+        }
+
+        .admin-filter {
+            padding: 10px;
+            border: 2px solid var(--maroon);
+            border-radius: 4px;
+            font-size: 16px;
+            min-width: 150px;
+        }
+
+        .admin-logout-btn {
+            background: var(--maroon);
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+
+        .admin-logout-btn:hover {
+            background: var(--maroon-light);
+        }
+
+        .admin-grid-container {
+            background: var(--white);
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(128,0,0,0.08);
+            overflow: hidden;
+        }
+
+        .admin-grid-header {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            background: var(--maroon);
+            color: var(--white);
+            padding: 12px;
+            font-weight: 600;
+        }
+
+        .admin-col {
+            flex: 1;
+        }
+
+        .admin-grid-body {
+            max-height: 400px;
+            overflow-y: auto;
+        }
+
+        .admin-row {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            padding: 10px;
+            border-bottom: 1px solid #eee;
+        }
+
+        .admin-row:last-child {
+            border-bottom: none;
+        }
+
+        .admin-action-btn {
+            background: none;
+            border: none;
+            color: var(--maroon);
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        .admin-action-btn.edit {
+            color: #007bff;
+        }
+
+        .admin-action-btn.delete {
+            color: #dc3545;
+        }
+
+        .admin-action-btn:hover {
+            text-decoration: underline;
+        }
+
+        /* Admin Login Overlay */
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .overlay-content {
+            background: white;
+            padding: 24px;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            width: 90%;
+            max-width: 400px;
+        }
+
+        .overlay-content h2 {
+            color: var(--maroon);
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            .tabs {
+                flex-direction: column;
+            }
+
+            .tab {
+                width: 100%;
+                margin-bottom: 10px;
+            }
+
+            .admin-grid-header {
+                display: block;
+            }
+
+            .admin-col {
+                display: block;
+                width: 100%;
+                margin-bottom: 10px;
+            }
+
+            .admin-controls {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .admin-search-box {
+                width: 100%;
+            }
+
+            .admin-filter {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
@@ -480,139 +781,132 @@
         <p>Loading...</p>
     </div>
 
+    <!-- Admin Login Overlay -->
+    <div class="admin-login-overlay" id="adminLoginOverlay">
+        <div class="admin-login-form">
+            <h2>Admin Login</h2>
+            <form id="adminLoginForm">
+                <div class="form-group">
+                    <label for="adminUsername">Username</label>
+                    <input type="text" id="adminUsername" required>
+                </div>
+                <div class="form-group">
+                    <label for="adminPassword">Password</label>
+                    <input type="password" id="adminPassword" required>
+                </div>
+                <button type="submit" class="btn-admin">Login</button>
+            </form>
+        </div>
+    </div>
+
     <!-- Alert Box for Messages -->
     <div class="alert" style="display: none;"></div>
 
-    <div class="container">
-        <!-- Admin/User mode selector -->
-        <div id="roleSelector" class="role-selector" style="display: none;">
-            <button class="role-button active" data-role="user">User Mode</button>
-            <button class="role-button" data-role="admin">Admin Mode</button>
-        </div>
+    <h1 class="app-title">GlobiQ Password Manager</h1>
 
-        <div class="tabs">
-            <div class="tab active" data-tab="addCredential">Add Credential</div>
-            <div class="tab" data-tab="viewCredentials">View Credentials</div>
-            <div class="tab admin-only" data-tab="adminPanel" style="display: none;">Admin Panel</div>
-        </div>
+    <!-- Tab Navigation -->
+    <div class="tabs">
+        <div class="tab active" data-tab="addCredential">Add Credential</div>
+        <div class="tab" data-tab="viewCredentials">View Credentials</div>
+        <div class="tab admin-tab" data-tab="adminPanel" style="display: none;">Admin Panel</div>
+    </div>
 
-        <div id="addCredential" class="tab-content active">
-            <div class="add-password-form">                
-                <div class="form-group">
-                    <label for="project">Project</label>
-                    <input type="text" id="project" class="input-field" placeholder="Enter project name">
-                </div>
+    <!-- Add Credential Tab -->
+    <div id="addCredential" class="tab-content active">
+        <div class="add-password-form">                
+            <div class="form-group">
+                <label for="project">Project</label>
+                <input type="text" id="project" class="input-field" placeholder="Enter project name">
+            </div>
 
-                <div class="form-group">
-                    <label for="category">Category</label>
-                    <input type="text" id="category" class="input-field" placeholder="Enter category name">
-                </div>
+            <div class="form-group">
+                <label for="category">Category</label>
+                <input type="text" id="category" class="input-field" placeholder="Enter category name">
+            </div>
 
-                <div class="form-group">
-                    <label for="status">Status</label>
-                    <select id="status" class="input-field">
-                        <option value="active">Active</option>
-                        <option value="expired">Expired</option>
-                        <option value="restricted">Restricted</option>
-                    </select>
-                </div>
+            <div class="form-group">
+                <label for="status">Status</label>
+                <select id="status" class="input-field">
+                    <option value="active">Active</option>
+                    <option value="expired">Expired</option>
+                    <option value="restricted">Restricted</option>
+                </select>
+            </div>
 
-                <div class="form-group admin-only" style="display: none;">
-                    <label>
-                        <input type="checkbox" id="isAdmin"> Admin View Only (Read-only credential)
-                    </label>
-                </div>
+            <div class="form-group admin-only" style="display: none;">
+                <label>
+                    <input type="checkbox" id="isAdmin"> Admin View Only (Read-only credential)
+                </label>
+            </div>
 
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" class="input-field" placeholder="Enter credential name" required>
-                </div>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" id="name" class="input-field" placeholder="Enter credential name" required>
+            </div>
 
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" class="input-field" placeholder="Enter username" required>
-                </div>
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" class="input-field" placeholder="Enter username" required>
+            </div>
 
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <div class="password-input-group">
-                        <input type="password" id="password" class="input-field" placeholder="Enter password" required>
-                        <div class="password-strength">
-                            <div class="password-strength-bar"></div>
-                        </div>
-                        <div id="passwordStrengthText">Password Strength: Not Set</div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <div class="password-input-group">
+                    <input type="password" id="password" class="input-field" placeholder="Enter password" required>
+                    <div class="password-strength">
+                        <div class="password-strength-bar"></div>
                     </div>
+                    <div id="passwordStrengthText">Password Strength: Not Set</div>
                 </div>
-
-                <button id="saveCredential" class="save-button">Save Credential</button>
             </div>
+
+            <button id="saveCredential" class="save-button">Save Credential</button>
         </div>
+    </div>
 
-        <div id="viewCredentials" class="tab-content">
-            <div class="view-controls">
-                <div class="filter-container">
-                    <input type="text" id="projectFilter" class="input-field" placeholder="Filter by project...">
-                    <input type="text" id="categoryFilter" class="input-field" placeholder="Filter by category...">
-                </div>
-                <div class="search-container">
-                    <input type="text" id="searchCredentials" class="input-field" placeholder="Search credentials...">
-                </div>
+    <!-- View Credentials Tab -->
+    <div id="viewCredentials" class="tab-content">
+        <div class="search-filters">
+            <div class="search-box">
+                <input type="text" id="searchCredentials" placeholder="Search credentials...">
             </div>
-            <div id="passwordList" class="credentials-grid">
+            <select id="projectFilter" class="filter-select">
+                <option value="All">All Projects</option>
+            </select>
+            <select id="categoryFilter" class="filter-select">
+                <option value="All">All Categories</option>
+            </select>
+        </div>
+        <div id="passwordList" class="credentials-grid">
+            <!-- Credentials will be populated here -->
+        </div>
+    </div>
+
+    <!-- Admin Panel Tab -->
+    <div id="adminPanel" class="tab-content">
+        <div class="admin-controls">
+            <div class="admin-search-box">
+                <input type="text" id="adminSearch" placeholder="Search credentials..." class="admin-search">
+                <select id="adminStatusFilter" class="admin-filter">
+                    <option value="all">All Status</option>
+                    <option value="active">Active</option>
+                    <option value="inactive">Inactive</option>
+                </select>
+            </div>
+            <button id="adminLogout" class="admin-logout-btn">
+                <i class="fas fa-sign-out-alt"></i> Logout Admin
+            </button>
+        </div>
+        <div class="admin-grid-container">
+            <div class="admin-grid-header">
+                <div class="admin-col">Website</div>
+                <div class="admin-col">Username</div>
+                <div class="admin-col">Created By</div>
+                <div class="admin-col">Status</div>
+                <div class="admin-col">Actions</div>
+            </div>
+            <div id="adminCredentialsList" class="admin-grid-body">
                 <!-- Credentials will be populated here -->
-            </div>
-        </div>
-
-        <div id="adminPanel" class="tab-content admin-only">
-            <div class="admin-dashboard">
-                <h2>Admin Dashboard</h2>
-                
-                <div class="admin-section">
-                    <h3>Credential Statistics</h3>
-                    <div class="stats-grid">
-                        <div class="stat-card">
-                            <div class="stat-title">Total Credentials</div>
-                            <div class="stat-value" id="totalCredentials">0</div>
-                        </div>
-                        <div class="stat-card">
-                            <div class="stat-title">Active Credentials</div>
-                            <div class="stat-value" id="activeCredentials">0</div>
-                        </div>
-                        <div class="stat-card">
-                            <div class="stat-title">Expired Credentials</div>
-                            <div class="stat-value" id="expiredCredentials">0</div>
-                        </div>
-                        <div class="stat-card">
-                            <div class="stat-title">Restricted Credentials</div>
-                            <div class="stat-value" id="restrictedCredentials">0</div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="admin-section">
-                    <h3>Recent Activity</h3>
-                    <div class="activity-list" id="recentActivity">
-                        <!-- Activity items will be populated here -->
-                    </div>
-                </div>
-
-                <div class="admin-section">
-                    <h3>User Management</h3>
-                    <div class="user-management">
-                        <div class="user-list" id="userList">
-                            <!-- User list will be populated here -->
-                        </div>
-                    </div>
-                </div>
-
-                <div class="admin-section">
-                    <h3>Bulk Actions</h3>
-                    <div class="bulk-actions">
-                        <button id="bulkDelete" class="danger-button">Delete Selected</button>
-                        <button id="bulkExport" class="primary-button">Export Selected</button>
-                        <button id="bulkStatusUpdate" class="secondary-button">Update Status</button>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
