--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GlobiQ Password Manager</title>
-    <script src="https://res.cdn.office.net/teams-js/2.14.0/js/MicrosoftTeams.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>GlobiQ Password Manager</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -915,12 +913,10 @@
                 <!-- Credentials will be populated here -->
             </div>
         </div>
-    </div>
-
-    <script src="js/password-utils.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/credential-manager.js"></script>
-    <script src="js/main.js"></script>
+    </div>    <script src="src/utils/encryption.js"></script>
+    <script src="src/js/api.js"></script>
+    <script src="src/js/credential-manager.js"></script>
+    <script src="src/js/main.js"></script>
     <script>
         // Initialize Microsoft Teams
         microsoftTeams.app.initialize().then(() => {
