fix: repair broken features and admin functionality
- Add proper API client for frontend-backend communication
- Fix static file serving
- Fix admin tab visibility
- Fix credential management functionality
- Improve error handling

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>GlobiQ Password Manager</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GlobiQ Password Manager</title>
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="/src/js/api.js" defer></script>
+    <script src="/src/js/credential-manager.js" defer></script>
+    <script src="/src/js/main.js" defer></script>
     <style>
         :root {
             --maroon: #800000;
