--- a/index.html
+++ b/index.html
@@ -878,6 +878,9 @@
             </form>
         </div>
         <div id="passwordList" class="credentials-table-container" style="margin-top:24px;"></div>
+        <div id="adminLogoutBox" style="display:none;text-align:center;margin-top:18px;">
+            <button id="adminLogoutBtn" style="background:#ef4444;color:#fff;padding:8px 24px;border:none;border-radius:6px;font-weight:600;font-size:1em;">Logout Admin</button>
+        </div>
     </div>
 
     <!-- Admin Panel Tab -->
