--- a/index.html
+++ b/index.html
@@ -810,13 +810,13 @@
 
     <!-- Tab Navigation -->
     <div class="tabs">
-        <div class="tab active" data-tab="addCredential" onclick="switchTab('addCredential')">
+        <div class="tab active" data-tab="addCredential">
             <i class="fas fa-plus-circle"></i> Add Credential
         </div>
-        <div class="tab" data-tab="viewCredentials" onclick="switchTab('viewCredentials')">
+        <div class="tab" data-tab="viewCredentials">
             <i class="fas fa-key"></i> View Credentials
         </div>
-        <div class="tab admin-tab" data-tab="adminPanel" onclick="switchTab('adminPanel')" style="display: none;">
+        <div class="tab admin-tab" data-tab="adminPanel" style="display: none;">
             <i class="fas fa-shield-alt"></i> Admin Dashboard
         </div>
     </div>
